[package]
name = "calcit_fingertrees"
version = "0.0.3"
authors = ["Pavel Aslanov <asl.pavel@gmail.com>", "jiyinyiyong@gmail.com"]
description = "(Calcit fork of )Immutable persisten `fingertrees`"
license = "MIT"
readme = "README.md"
repository = "https://github.com/calcit-lang/fingertree-rs"
categories = ["data-structures"]
keywords = ["calcit", "immutable", "persistent", "data-structures"]
edition = "2018"

[badges]
travis-ci = { repository = "aslpavel/fingertree-rs" }
coveralls = { repository = "aslpavel/fingertree-rs" }

[dependencies]

[dev-dependencies]
criterion = "^0.3"
quickcheck = "^0.9"

[lib]
bench = false

[[bench]]
name = "criterion"
harness = false
